--- a/portfolio.html
+++ b/portfolio.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ariful Islam</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="portfolio.css">
 </head>
 <body>
-    
+    <section>
+        <div class="half-width">
+            <h1> Welcome To <br> <span class="orange">Ariful Islam's</span> World</h1>
+            <br><br>
+            <h3>Web developer, A student</h3><br>
+            <p> Hi, I am a proffessional website developer. My passion is to build lucrative websites. I have expertise at <span class="orange">HTML, CSS, JAVASCRIPT, BOOTSTRAP, TAILWIND CSS, NODE JS, MONGO DB, REACT JS.</span>
+            I have 1 year+ experience and i have done 13+ projects. Really need a <span style="color: blue;">MERN STACK DEVELOPER?</span>Count me in!</p>
+            <a class="button" href="https://www.facebook.com/ariful.islam.50057" target="_blank">HIRE ME</a>
+        </div>
+        
+        <div class="half-width">
+            <img src="my-bg.png"> </img>
+        </div>
+
+    </section>
 </body>
 </html>
